# playbook

./: .gitignore  Cargo.toml  README.md
base/: Cargo.toml
base/src/: canvas.rs  lib.rs  table_data.rs  valid.rs  vcs.rs
base/src/canvas/: valid.rs
base/src/table_data/: csv.rs
dxfront/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json
dxfront/assets/: main.css  tailwind.css
dxfront/src/: canvas.rs  main.rs
dxfront/src/canvas/: grid.rs  node.rs
wasm-bind/: Cargo.toml
wasm-bind/src/: lib.rs  project.rs  vcs.rs  work_session.rs
wasm-bind/src/project/: js_nodes.rs
wasm-bind/src/work_session/: change_op.rs
