[package]
name = "base"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4"
compact_str = "0.8"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
lazy-regex = "3.4"
bigdecimal = "0.4"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
