[package]
name = "dxfront"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = [] }
enumset = "*"
tracing = { version = "*", features = ["log"] }

log = "0.4"
tracing-log = "0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
