[package]
name = "wasm-bind"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"

[dependencies]
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
serde_json = "1.0"
compact_str = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
lazy-regex = "3.4"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
uuid = { version = "1.11", features = ["v4", "js"] }

base = { path = "../base" }

# This allows compilation for WASM to succeed. This is a transitive dependency of `rand` in `base`.
getrandom = { version = "0", features = ["js"] }
